--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -30,7 +30,7 @@
 # Ninja
 #################################################
 job-centos7-ninja-gcc:
-  tags: [ "docker" ]
+  tags: [ "docker-test-centos7-liblinphone-nuc" ]
   #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
   except:
@@ -63,7 +63,7 @@ job-centos7-ninja-gcc:
 
 job-centos7-ninja-gcc-package:
   stage: package
-  tags: [ "docker" ]
+  tags: [ "docker-test-centos7-liblinphone-nuc" ]
   #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7  
   image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
   only:
@@ -87,7 +87,7 @@ job-centos7-ninja-gcc-package:
 
 job-centos7-ninja-gcc-deploy:
   stage: deploy
-  tags: [ "docker" ]
+  tags: [ "docker-test-centos7-liblinphone-nuc" ]
   dependencies:
     - job-centos7-ninja-gcc-package
   only:
@@ -103,7 +103,7 @@ job-centos7-ninja-gcc-deploy:
 
 job-centos7-debug:
   stage: deploy
-  tags: [ "docker" ]
+  tags: [ "docker-test-centos7-liblinphone-nuc" ]
   #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
   only:
